--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,11 @@ yarn_mappings=1.20.4+build.3
 loader_version=0.15.10
 
 # Mod Properties
-mod_version=1.1.0
+mod_version=1.2.0
 maven_group=permdog99.legacy_mipmaps
 archives_base_name=legacy-mipmaps
 
 # Dependencies
 fabric_version=0.97.0+1.20.4
+legacy_version=1.20.4-1.6.7+fabric
+owo_version=0.12.6+1.20.3
